# eurydice

./: .gitignore  .justfile  Cargo.toml  README.md
migrations/: 0001_initial.down.sql  0001_initial.up.sql
src/: autocomplete.rs  commands.rs  error.rs  lib.rs
src/commands/: character.rs  game.rs  system.rs
src/commands/character/: assign.rs  claim.rs  create.rs  delete.rs  edit.rs  release.rs  view.rs
src/commands/game/: activate.rs  channel.rs  create.rs  deactivate.rs  delete.rs  edit.rs  player.rs  system.rs  transfer.rs  view.rs
src/commands/game/channel/: set.rs  unset.rs
src/commands/game/player/: add.rs  remove.rs
src/commands/game/system/: set.rs  unset.rs
src/commands/system/: create.rs  delete.rs  edit.rs  view.rs
tests/: db.rs
